Log missing Strava env vars in integration test

--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,8 @@
 # Used for authentication with the Strava API.
 STRAVA_CLIENT_ID=
 STRAVA_CLIENT_SECRET=
+STRAVA_REFRESH_TOKEN=
+STRAVA_ACCESS_TOKEN=
 
 # Example database connection string.
 DATABASE_URL=sqlite:///ultra-trainer.db
