--- a/.env.template
+++ b/.env.template
@@ -5,5 +5,9 @@ STRAVA_CLIENT_SECRET=
 STRAVA_REFRESH_TOKEN=
 STRAVA_ACCESS_TOKEN=
 
+# OpenAI API configuration for GPT-4o model access
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o
+
 # Example database connection string.
 DATABASE_URL=sqlite:///ultra-trainer.db
